added java test cases